--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 </head>
 <body>
     <header>
-        <h1>Teste-01</h1>
+
     </header>
+
+    <main>
+        <div class="container">
+            <h1>A Fast Blockchain.</h1>
+            <h1>Scalable AI.</h1>
+            <p>Our technology performing fast blockchain (120K TPS) and it has guaranteed AI-based data security. Proof of Stake, its consensus algorithm enables unlimited speeds.</p>
+            <div class="botoes">
+                <a href="" class="btn1">Get started</a>
+                <a href="" class="btn2">Ecosystems</a>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
