--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <main>
         <div class="container">
-            <h1>A Fast Blockchain.</h1>
-            <h1>Scalable AI.</h1>
+            <h1 class="titulo_1">A Fast Blockchain.</h1>
+            <h1 class="titulo_2">Scalable AI.</h1>
             <p>Our technology performing fast blockchain (120K TPS) and it has guaranteed AI-based data security. Proof of Stake, its consensus algorithm enables unlimited speeds.</p>
             <div class="botoes">
                 <a href="" class="btn1">Get started</a>
