Projeto final adicionado

--- a/index.html
+++ b/index.html
@@ -7,18 +7,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-
+    
+    <header id="header">
+        <div class="box-titleWebSite">
+            <img src="images/Serendale.png" alt="">
+        </div>
+        <nav class="tag-nav">
+            <ul class="tag-ul">
+                <li><a href="#">Smart Contracts</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Solutions</a></li>
+                <li><a href="#">Roadmap</a></li>
+                <li><a href="#">Whitepaper</a></li>
+            </ul>
+        </nav>
+        <div id="box-redes-sociais">
+            <img src="images/mdi_github.png" alt="gitHub">
+            <img src="images/mdi_discord.png" alt="discord">
+            <img src="images/mdi_reddit.png" alt="reddit">
+            <img src="images/mdi_twitter.png" alt="twitter">
+        </div>
     </header>
 
     <main>
         <div class="container">
-            <h1 class="titulo_1">A Fast Blockchain.</h1>
-            <h1 class="titulo_2">Scalable AI.</h1>
-            <p>Our technology performing fast blockchain (120K TPS) and it has guaranteed AI-based data security. Proof of Stake, its consensus algorithm enables unlimited speeds.</p>
+            <h1 class="titulo titulo_1">A Fast Blockchain.</h1>
+            <h1 class="titulo titulo_2">Scalable AI.</h1>
+            <p class="paragrafo">Our technology performing fast blockchain (120K TPS) and it has guaranteed AI-based data security. Proof of Stake, its consensus algorithm enables unlimited speeds.</p>
             <div class="botoes">
-                <a href="" class="btn1">Get started</a>
-                <a href="" class="btn2">Ecosystems</a>
+                <a href="" class="btn btn1">Get started</a>
+                <a href="" class="btn btn2">Ecosystems</a>
             </div>
         </div>
     </main>
